# Gravai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  Makefile  PLAN_mistral_rs_migration.md  PRD.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.json
.claude/commands/: gravai-arch.md  gravai-audio.md  gravai-config.md  gravai-core.md  gravai-events.md  gravai-frontend.md  gravai-intelligence.md  gravai-models.md  gravai-session.md  gravai-storage.md
.claude/hooks/: regen-skill.sh
.github/workflows/: ci.yml  release.yml
.zed/: tasks.json
crates/gravai-audio/: Cargo.toml
crates/gravai-audio/src/: capture.rs  echo.rs  encoder.rs  lib.rs  mixer.rs  pipeline.rs  recorder.rs  resampler.rs  screencapturekit.rs  silence.rs
crates/gravai-audio/src/vad/: mod.rs  silero.rs  webrtc.rs
crates/gravai-config/: Cargo.toml
crates/gravai-config/src/: automations.rs  lib.rs  presets.rs  profiles.rs  shortcuts.rs
crates/gravai-core/: Cargo.toml
crates/gravai-core/src/: app_state.rs  error.rs  event_bus.rs  lib.rs  logging.rs  perf.rs  preflight.rs  session.rs
crates/gravai-export/: Cargo.toml
crates/gravai-export/src/: lib.rs  markdown.rs  notion.rs  obsidian.rs  pdf.rs
crates/gravai-intelligence/: Cargo.toml
crates/gravai-intelligence/src/: chat.rs  lib.rs  llm_client.rs  local_engine.rs  prompts.rs
crates/gravai-intelligence/src/correction/: mod.rs
crates/gravai-intelligence/src/diarization/: mod.rs  pyannote.rs
crates/gravai-intelligence/src/embeddings/: mod.rs  onnx_embedder.rs
crates/gravai-intelligence/src/sentiment/: mod.rs  onnx_engine.rs
crates/gravai-intelligence/src/summarization/: mod.rs
crates/gravai-meeting/: Cargo.toml
crates/gravai-meeting/src/: calendar.rs  detector.rs  lib.rs
crates/gravai-models/: Cargo.toml
crates/gravai-models/src/: lib.rs
crates/gravai-storage/: Cargo.toml
crates/gravai-storage/sql/: 001_initial.sql  002_embeddings.sql  003_sentiment.sql  004_chat_conversations.sql  005_knowledge_base.sql  006_utterance_corrections.sql  007_session_bookmarks.sql
crates/gravai-storage/src/: database.rs  lib.rs  migrations.rs
crates/gravai-transcription/: Cargo.toml
crates/gravai-transcription/src/: http_stub.rs  lib.rs  whisper.rs
docs/: NEXT_PHASE_LIVE_ACCESSIBILITY.md  ios-companion-architecture.md
scripts/: deploy.sh  gen_icon.py
src-frontend/: App.svelte  main.ts  styles.css
src-frontend/components/: AlertBar.svelte  AppPicker.svelte  AudioPlayer.svelte  Icon.svelte  LlmStatusBanner.svelte  Onboarding.svelte  PerfMonitor.svelte  SessionPicker.svelte  StatusBar.svelte  TranscriptView.svelte
src-frontend/lib/: store.ts  tauri.ts
src-frontend/pages/: Archive.svelte  Automations.svelte  Chat.svelte  Knowledge.svelte  Models.svelte  Presets.svelte  Profiles.svelte  Recording.svelte  Settings.svelte  Shortcuts.svelte  Storage.svelte
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  PrivacyInfo.xcprivacy  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  bookmarks.rs  config_extras.rs  export.rs  intelligence.rs  knowledge.rs  mod.rs  models.rs  search.rs  session.rs  storage.rs  tools.rs
