[package]
name = "gravai-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Versioned configuration, profiles, presets, shortcuts, automations"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
