[package]
name = "gravai-intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI intelligence: summarization, diarization, embeddings, LLM client"

[dependencies]
gravai-core = { workspace = true }
gravai-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
chrono = { workspace = true }
ort = { workspace = true }
tokenizers = { workspace = true }
