[package]
name = "gravai-meeting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Meeting detection and calendar integration"

[dependencies]
gravai-core = { workspace = true }
gravai-audio = { workspace = true }
gravai-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
