[package]
name = "gravai-meeting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Meeting detection and calendar integration"

[dependencies]
gravai-core = { workspace = true }
gravai-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSDate", "NSString", "NSArray", "NSPredicate", "NSEnumerator"] }
objc2-event-kit = { version = "0.3", features = ["EKEventStore", "EKEvent", "EKCalendarItem", "EKObject", "EKCalendar"] }
