[package]
name = "gravai-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ML model download and management"

[dependencies]
gravai-config = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
futures-util = { workspace = true }
