[package]
name = "gravai-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite storage: sessions, utterances, FTS5 search, migrations"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
